tests/invalid/pack_index_requires_compile_time_constant.wio
fn Bad<T, Args...>(index: usize, args: Args...) -> T {
    return args[index];
}

fn Entry() -> i32 {
    return 0;
}
